fix soeme layout issues -added responsivity for phones and ipad using media q - added animation for info box using vanilla javascript and added animation to player card using AOS lib - add menue toggel for responsivity ...ah!

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img {
 }
 
 /*------------------------------------------------[ Nav Bar ]------------------------------------------------*/
-.main-nav ul {
+#main-nav ul,#ul {
     position: fixed;
     display: grid;
     width: 96%;
@@ -59,7 +59,7 @@ img {
     direction: rtl;
 }
 
-.main-nav a{
+#main-nav a, #mobile{
     background: var(--dark);
     text-decoration: none;
     color: var(--light);
@@ -70,6 +70,10 @@ img {
     position: relative;
     right:5%;
     z-index: 1;
+}
+#mobile{
+    display: none;
+    
 }
 .search-button{
     
@@ -113,7 +117,6 @@ img {
     background: url(./pic/main-pic.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    /* background-position: center; */
     padding: 2.5rem;
     display: flex;
     flex-direction: column;
@@ -125,6 +128,8 @@ img {
     position: relative;
     z-index: 1;
     max-height: 100vh;
+    transition: opacity 0.001s;
+    
     
     
 }
@@ -202,6 +207,7 @@ p{
     text-align: justify;
     grid-template-areas: 
     'naming history';
+    transition: opacity 500ms ease-in;
 }
 .naming, .history{
     background-color: var(--primery);
@@ -234,7 +240,7 @@ p{
     color: var(--dark);
     background-color: var(--primery);
     max-height: 100%;
-    transition: 250ms;
+   
 }
 .avatar{ 
     max-height: 40vh;
@@ -247,7 +253,7 @@ p{
 
 
 /*------------------------------------------------[ NavBar-animatins ]------------------------------------------------ */
-.main-nav a::after{
+#main-nav a::after{
     content: "";
     position: absolute;
     width: 100%;
@@ -266,6 +272,12 @@ p{
     transform-origin: right;
     border-radius: 0;
 }
+/* .mobile{
+    min-width: 100%;
+    text-align: center;
+    text-decoration: none;
+    
+} */
 /*------------------------------------------------[ Plyers Card Hover ]------------------------------------------------*/
 .card:hover{
     transition: transform 100ms ease-in;
@@ -283,3 +295,75 @@ footer{
     text-align: center;
     border-top: solid #d7e3fc 1px;
 }
+@media screen and (max-width: 850px){
+    body{
+        max-width: 100vw;
+    }
+    #main-nav ul{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        max-width: 100%;
+
+    }
+    #mobile{
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #d6d9e4;
+
+    }
+    #mobile h2 {
+        text-align: center;
+    }
+    
+    .top-container{
+        display: flex;
+        flex-direction: column;
+        max-height: 100%;
+        max-width: 100vw;
+    }
+    .info{
+        display: flex;
+        flex-direction: column;
+        max-width: 100vw;
+    }
+    h1, h2 ,h3, p,.showcase h1,.showcase p{ 
+        font-size: 0.8rem;
+    }
+    .cards-container{
+        grid-template-columns: repeat(1, 1fr);
+        padding: 1;
+    }
+    #hiden3 p{
+        font-size: 5px;
+    }
+    .showcase{
+        padding: 0.5;
+        
+    }
+    #main-nav ul,#ul{
+        display: none;
+    }
+    img{
+        width: 100%;
+    }
+}
+
+
+@media screen and ( max-width: 1200px) and (min-width:850px){
+
+    .cards-container{
+        grid-template-columns: repeat(3, 1fr);
+        padding: 1;
+    }
+
+}
+/* @media screen and ( max-width: 1200px) and (min-width:949px){
+
+    .cards-container{
+        grid-template-columns: repeat(4, 1fr);
+        padding: 1;
+    }
+
+} */
